Implementada a funcionalidade Relatórios Automatizados.
